# RiemAlzh

./: .gitignore  .gitmodules  CMakeLists.txt  GibbsSampler.cpp  GibbsSampler.h  MCMC.cpp  MCMC.h  Parameters.txt  ParametersBlocked.txt  ParametersBlockedTest.txt  ParametersBlockedTest2.txt  ParametersMH.txt  README.md  Realizations.txt  SimulatedData.txt  TimePoints.txt  algorithm_settings.xml  data_settings.xml  geodesic.cpp  geodesic.h  log_file.txt  lol  main.cpp  model_settings.xml  parameter.cpp  parameter.h  random_variable.cpp  random_variable.h  subject.cpp  subject.h  tools.cpp  tools.h
Algorithm/: Algorithm.cpp  Algorithm.h
Inputs/: ReadData.cpp  ReadData.h
LinearAlgebra/: LinearAlgebra.h
LinearAlgebra/Armadillo/: ArmadilloLinearAlgebra.h  ArmadilloMatrixWrapper.h  ArmadilloMatrixWrapper_friend.h  ArmadilloVectorWrapper.h  ArmadilloVectorWrapper_friend.h
LinearAlgebra/Utilities/: MatrixFunctions.h
Manifolds/: AbstractManifold.cpp  AbstractManifold.h  ExponentialCurveManifold.cpp  ExponentialCurveManifold.h  LinearManifold.cpp  MultivariateLogisticManifold.cpp  MultivariateLogisticManifold.h  PropagationManifold.cpp  PropagationManifold.h
Manifolds/BaseManifold/: AbstractBaseManifold.cpp  AbstractBaseManifold.h  ExponentialBaseManifold.cpp  ExponentialBaseManifold.h  LogisticBaseManifold.cpp  LogisticBaseManifold.h
Model/: LongitudinalModel.cpp  LongitudinalModel.h
Models/: AbstractModel.cpp  AbstractModel.h  LongitudinalModel.cpp  LongitudinalModel.h  NetworkPropagationModel.cpp  NetworkPropagationModel.h  NetworkPropagationModel2.cpp  NetworkPropagationModel2.h  TestModel.cpp  TestModel.h  UnivariateModel.cpp  UnivariateModel.h
OldFilesToInsert/: LongitudinalModel.cpp  LongitudinalModel.h  NetworkPropagationModel.cpp  NetworkPropagationModel.h  NetworkPropagationModel2.cpp  NetworkPropagationModel2.h  TestModel.cpp  TestModel.h  UnivariateModel.cpp  UnivariateModel.h
Outputs/: RandomVariableRealizations.cpp  RandomVariableRealizations.h
Parameters/: CandidateRandomVariables.cpp  CandidateRandomVariables.h
RandomVariables/: AbstractRandomVariable.cpp  AbstractRandomVariable.h  ConstantRandomVariable.cpp  ConstantRandomVariable.h  GaussianRandomVariable.cpp  GaussianRandomVariable.h  LaplaceRandomVariable.cpp  LaplaceRandomVariable.h  LogNormalRandomVariable.cpp  LogNormalRandomVariable.h  LogitNormalRandomVariable.cpp  LogitNormalRandomVariable.h
Samplers/: AbstractSampler.cpp  AbstractSampler.h  BlockGibbsSampler.cpp  BlockGibbsSampler.h  BlockedGibbsSampler.cpp  BlockedGibbsSampler.h  BlockedGibbsSampler2.cpp  BlockedGibbsSampler2.h  HMWithinGibbsSampler.cpp  HMWithinGibbsSampler.h  HastingMetropolisWithinGibbs.cpp  HastingMetropolisWithinGibbs.h
Tests/: TestAssert.h
Utilities/: MatrixFunctions.cpp  MatrixFunctions.h
data/: invKd_16.csv
datatest/: Data_Test_SAEM_Y.txt  Data_Test_SAEM_Y_2.csv  Data_Test_SAEM_Y_3.txt  Kd_toyexample.csv  Kxd_toyexample.csv
datatest/DataCorticalThickness/: X.csv  beta.csv  delta.csv  group.csv  invKd.csv
io/: ReadData.cpp  ReadData.h
src/: global.cpp  global.h  main.cpp
src/algorithm/: Algorithm.cpp  Algorithm.h
src/asserts/: InputException.h  InputsAssert.cpp  InputsAssert.h
src/io/: AlgorithmSettings.cpp  AlgorithmSettings.h  DataSettings.cpp  DataSettings.h  ModelSettings.cpp  ModelSettings.h  ReadData.cpp  ReadData.h  SamplerSettings.cpp  SamplerSettings.h
src/launch/: main.cpp
src/manifolds/: AbstractManifold.cpp  AbstractManifold.h  ExponentialCurveManifold.cpp  ExponentialCurveManifold.h  LinearManifold.cpp  LinearManifold.h  PropagationManifold.cpp  PropagationManifold.h
src/models/: AbstractModel.cpp  AbstractModel.h  FastNetworkModel.cpp  FastNetworkModel.h  LongitudinalModel.cpp  LongitudinalModel.h  MeshworkModel.cpp  MeshworkModel.h  MultivariateModel.cpp  MultivariateModel.h  NetworkModel.cpp  NetworkModel.h  NetworkPropagationModel.cpp  NetworkPropagationModel.h  NetworkPropagationModel2.cpp  NetworkPropagationModel2.h  TestModel.cpp  TestModel.h  UnivariateModel.cpp  (+1 more)
test/: CMakeLists.txt  RunTests.cxx  TestAssert.h  log_multivariate_file.txt  test_global.cxx  test_global.h
test/algorithm/: TestAlgorithm.cxx  TestAlgorithm.h
test/datasets/algorithm/: algorithm_missing_param.xml  algorithm_negative_iterations.xml  algorithm_unparsable_xml.xml  correct_algorithm_settings.xml
test/datasets/data/: correct_real_multivariate_data_settings.xml  correct_real_univariate_data_settings.xml  correct_simulated_data_settings.xml  data_correct_simulated_settings.xml  multivariate_data_correct_real_settings.xml  multivariate_data_wrong_settings_missing_param.xml  multivariate_data_wrong_settings_unparsable_xml.xml  multivariate_data_wrong_settings_wrong_type.xml  univariate_data_correct_real_settings.xml
test/datasets/data/data_files/: Y.csv
test/datasets/data/data_files_univariate/: X.csv  Y.csv
test/datasets/models/: correct_univariate_model_settings.xml  multivariate_model_correct_settings.xml  multivariate_model_wrong_settings_missing_param.xml  multivariate_model_wrong_settings_missing_variable.xml  multivariate_model_wrong_settings_unparsable_xml.xml  multivariate_model_wrong_settings_wrong_type.xml  univariate_model_correct_settings.xml
test/datasets/outputs/: ref_log_multivariate_real_file.txt  ref_log_multivariate_simulated_file.txt  ref_log_univariate_real_file.txt  ref_log_univariate_simulated_file.txt
test/integration/: MultivariateScalarModels_IT.cxx  MultivariateScalarModels_IT.h  ScalarModels_IT.cxx  ScalarModels_IT.h  UnivariateScalarModels_IT.cxx  UnivariateScalarModels_IT.h
test/io/: TestAlgorithmSettings.cxx  TestAlgorithmSettings.h  TestDataSettings.cxx  TestDataSettings.h  TestModelSettings.cxx  TestModelSettings.h  TestReadData.cxx  TestReadData.h
test/unit/algorithm/: Algorithm_UT.cxx  Algorithm_UT.h
test/unit/io/: AlgorithmSettings_UT.cxx  AlgorithmSettings_UT.h  DataSettings_UT.cxx  DataSettings_UT.h  ModelSettings_UT.cxx  ModelSettings_UT.h  ReadData_UT.cxx  ReadData_UT.h
test/usercase/: TestScalarModel.cxx  TestScalarModel.h
(+398 files in other folders)
